[package]
name = "readme_tangle"
version = "0.1.0"
edition = "2021"
description = "Extract Source Code from README's similar to Emacs Org Mode."
license = "MIT"
license-file = "LICENSE"
authors = [ "David Rieser <david.w.rieser@gmail.com>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
pulldown-cmark = { version = "0.9.2", default-features = false }
